--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JnHs
   ms.author: jenhayes
   ms.date: 07/20/2020
-  ms.openlocfilehash: b7f8a44b8e2d049a2a558b9a78d896ac638f5d1c
-  ms.sourcegitcommit: 80b9c8ef63cc75b226db5513ad81368b8ab28a28
+  ms.openlocfilehash: 0748df5bdc961ff198d91d2584072cd07965995d
+  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/16/2020
-  ms.locfileid: "90603180"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90971907"
 landingContent:
 - title: 关于 Azure Lighthouse
   linkLists:
@@ -103,6 +103,8 @@ landingContent:
       url: /dotnet/api/Microsoft.Azure.Management.ManagedServices
     - text: Python
       url: /python/api/azure-mgmt-managedservices
+    - text: Terraform
+      url: https://www.terraform.io/docs/providers/azurerm/r/lighthouse_assignment.html
 - title: 参考 - 下载
   linkLists:
   - linkListType: download
