--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -10,23 +10,29 @@ metadata:
   author: MGoedtel
   ms.author: magoedte
   ms.date: 08/21/2020
-  ms.openlocfilehash: 6dec6bb451e7a330138c9a2a65f2a7dec7202a6a
-  ms.sourcegitcommit: 8a7b82de18d8cba5c2cec078bc921da783a4710e
+  ms.openlocfilehash: a2bf337f5bcd5d4fb5810025b6d2aaa8da15201c
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/28/2020
-  ms.locfileid: "89051315"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90908233"
 highlightedContent:
   items:
+  - title: 关于 Azure Arc
+    itemType: overview
+    url: overview.md
   - title: 启用了 Azure Arc 的服务器（预览版）
     itemType: overview
     url: ./servers/overview.md
   - title: 启用了 Azure Arc 的 Kubernetes（预览版）
     itemType: overview
     url: ./kubernetes/overview.md
-  - title: 关于 Azure Arc
+  - title: 已启用 Azure Arc 的数据服务（预览）
     itemType: overview
-    url: overview.md
+    url: ./data/overview.md
+  - title: 已启用 Azure Arc 的 SQL Server（预览）
+    itemType: overview
+    url: https://docs.microsoft.com/en-us/sql/sql-server/
 productDirectory:
   title: 已启用 Azure Arc 的服务
   summary: 查看如何随处运行服务。
@@ -43,13 +49,31 @@ productDirectory:
     - url: ./servers/index.yml
       text: 查看更多…
   - title: 已启用 Azure Arc 的 Kubernetes
-    imageSrc: ./media/containers-101-kubernetes-services.svg
+    imageSrc: ./media/01088-icon-arc-kubernetes-menu.svg
     links:
     - url: ./kubernetes/connect-cluster.md
       text: 连接群集
     - url: ./kubernetes/use-gitops-connected-cluster.md
       text: 使用 GitOps 部署配置
     - url: ./kubernetes/index.yml
+      text: 查看更多…
+  - title: 已启用 Azure Arc 的数据服务（预览）
+    imageSrc: ./media/manage-756-azure-arc.svg
+    links:
+    - url: ./data/install-client-tools.md
+      text: 安装工具
+    - url: ./data/create-sql-managed-instance.md
+      text: 创建 SQL 托管实例
+    - url: ./data/create-postgresql-hyperscale-server-group.md
+      text: 创建 PostgreSQL 超大规模
+    - url: ./data/index.yml
+      text: 查看更多…
+  - title: 已启用 Azure Arc 的 SQL Server（预览）
+    imageSrc: ./media/01850-icon-arc-sql-server-menu.svg
+    links:
+    - url: https://docs.microsoft.com/sql/sql-server/azure-arc/assess
+      text: 评估 SQL 实例
+    - url: https://docs.microsoft.com/sql/sql-server/azure-arc/overview
       text: 查看更多…
 conceptualContent:
   title: 入门
