--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -184,6 +184,8 @@
       items:
         - name: 为 VPN 网关配置 BGP
           items:
+            - name: Azure 门户
+              href: bgp-howto.md
             - name: Azure PowerShell
               href: vpn-gateway-bgp-resource-manager-ps.md
             - name: Azure CLI
@@ -228,6 +230,8 @@
           href: create-zone-redundant-vnet-gateway.md
     - name: 在连接上配置 IPsec/IKE 策略
       items:
+        - name: Azure 门户
+          href: ipsec-ike-policy-howto.md
         - name: PowerShell
           href: vpn-gateway-ipsecikepolicy-rm-powershell.md
     - name: 配置主动-主动连接
