--- a/articles/aks/index.yml
+++ b/articles/aks/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: laurenhughes
   ms.author: lahugh
   ms.date: 07/21/2020
-  ms.openlocfilehash: 35138e4e5569ddfa46cb60c742e7ae0b3868c8cd
-  ms.sourcegitcommit: 97a0d868b9d36072ec5e872b3c77fa33b9ce7194
+  ms.openlocfilehash: 98d96c36e8ec801c2a8a5a87d0075f2d9b57bd98
+  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/04/2020
-  ms.locfileid: "87563324"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90984955"
 landingContent:
 - title: 关于 Azure Kubernetes 服务 (AKS)
   linkLists:
@@ -50,14 +50,14 @@ landingContent:
       url: kubernetes-walkthrough-portal.md
     - text: 资源管理器模板
       url: kubernetes-walkthrough-rm-template.md
-- title: 使用 Kubernetes 本地进程开发和调试应用程序
+- title: 利用 Bridge to Kubernetes 开发和调试应用程序
   linkLists:
   - linkListType: how-to-guide
     links:
-    - text: 在 Visual Studio Code 中使用 Local Process with Kubernetes（预览版）
-      url: https://code.visualstudio.com/docs/containers/local-process-kubernetes
-    - text: 在 Visual Studio 中使用 Local Process with Kubernetes（预览版）
-      url: /visualstudio/containers/local-process-kubernetes
+    - text: 将 Kubernetes 桥接用于 Visual Studio Code
+      url: https://code.visualstudio.com/docs/containers/bridge-to-kubernetes
+    - text: 将 Kubernetes 桥接用于 Visual Studio
+      url: /visualstudio/containers/bridge-to-kubernetes
 - title: 部署、管理和更新应用程序
   linkLists:
   - linkListType: tutorial
