--- a/articles/iot-central/core/index.yml
+++ b/articles/iot-central/core/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: philmea
   ms.author: philmea
   ms.date: 06/21/2020
-  ms.openlocfilehash: 870895980c90262a20cfd5ea95a4fdb01b39b4a3
-  ms.sourcegitcommit: 43558caf1f3917f0c535ae0bf7ce7fe4723391f9
+  ms.openlocfilehash: bdd087a2826c22d03decba231c2d441c99bca974
+  ms.sourcegitcommit: bdd5c76457b0f0504f4f679a316b959dcfabf1ef
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/11/2020
-  ms.locfileid: "90015868"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90974298"
 landingContent:
 - title: 关于 Azure IoT Central
   linkLists:
@@ -85,7 +85,7 @@ landingContent:
     links:
     - text: 创建遥测规则
       url: tutorial-create-telemetry-rules.md
-    - text: 将数据导出到 Azure 中的目标
+    - text: 将数据导出到云目标
       url: howto-export-data.md
     - text: 探索 IoT Central API
       url: https://docs.microsoft.com/learn/modules/manage-iot-central-apps-with-rest-api/
