commit translated contents

--- a/articles/azure-arc/index.yml
+++ b/articles/azure-arc/index.yml
@@ -9,19 +9,19 @@ metadata:
   ms.topic: hub-page
   author: MGoedtel
   ms.author: magoedte
-  ms.date: 08/21/2020
-  ms.openlocfilehash: a2bf337f5bcd5d4fb5810025b6d2aaa8da15201c
-  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
+  ms.date: 09/23/2020
+  ms.openlocfilehash: ea57cbb94a45339c6de58ba1abdaa864ddc43186
+  ms.sourcegitcommit: 32c521a2ef396d121e71ba682e098092ac673b30
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/22/2020
-  ms.locfileid: "90908233"
+  ms.lasthandoff: 09/25/2020
+  ms.locfileid: "91317236"
 highlightedContent:
   items:
   - title: 关于 Azure Arc
     itemType: overview
     url: overview.md
-  - title: 启用了 Azure Arc 的服务器（预览版）
+  - title: 已启用 Azure Arc 的服务器
     itemType: overview
     url: ./servers/overview.md
   - title: 启用了 Azure Arc 的 Kubernetes（预览版）
@@ -32,7 +32,7 @@ highlightedContent:
     url: ./data/overview.md
   - title: 已启用 Azure Arc 的 SQL Server（预览）
     itemType: overview
-    url: https://docs.microsoft.com/en-us/sql/sql-server/
+    url: https://docs.microsoft.com/sql/sql-server/azure-arc/overview
 productDirectory:
   title: 已启用 Azure Arc 的服务
   summary: 查看如何随处运行服务。
@@ -78,7 +78,7 @@ productDirectory:
 conceptualContent:
   title: 入门
   items:
-  - title: 启用了 Azure Arc 的服务器（预览版）
+  - title: 已启用 Azure Arc 的服务器
     links:
     - url: ./servers/learn/quick-enable-hybrid-vm.md
       itemType: get-started
