--- a/articles/active-directory/app-provisioning/toc.yml
+++ b/articles/active-directory/app-provisioning/toc.yml
@@ -78,7 +78,7 @@
     - name: 生成 SCIM 终结点并配置预配
       href: use-scim-to-provision-users-and-groups.md
     - name: 使用 MS Graph 自动执行配置
-      href: application-provisioning-configure-api.md
+      href: 'https://docs.microsoft.com/graph/application-provisioning-configure-api'
 - name: 参考
   items:
     - name: SCIM 2.0 协议符合性
