--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -34,12 +34,14 @@
         - name: Azure Defender 概述
           href: azure-defender.md
         - name: 适用于服务器的 Azure Defender
+          displayName: VM
           href: defender-for-servers-introduction.md
         - name: 适用于应用服务的 Azure Defender
           href: defender-for-app-service-introduction.md
         - name: 适用于存储的 Azure Defender
           href: defender-for-storage-introduction.md
         - name: 适用于 SQL 的 Azure Defender
+          displayName: database
           href: defender-for-sql-introduction.md
         - name: 适用于 IoT 的 Azure Defender
           href: defender-for-iot-introduction.md
@@ -55,6 +57,7 @@
         - name: 其他威胁防护
           href: other-threat-protections.md
     - name: 安全中心的容器安全功能
+      displayName: 'kubernetes, aks, acr, registries'
       href: container-security.md
     - name: 定价
       href: security-center-pricing.md
@@ -134,6 +137,7 @@
         - name: 管理安全建议
           items:
             - name: 自动响应建议
+              displayName: workflow
               href: workflow-automation.md
             - name: 导出建议
               href: continuous-export.md
@@ -222,6 +226,7 @@
         - name: 验证警报配置（EICAR 测试文件）
           href: security-center-alert-validation.md
         - name: 自动响应警报
+          displayName: workflow
           href: workflow-automation.md
         - name: 导出警报
           displayName: continuous
